// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuggestibleInput matches snapshot 1`] = `
<div
  class="formatted-input suggestible-input"
>
  <div
    class="bp5-input-group"
  >
    <input
      class="bp5-input"
      style="padding-right: 0px;"
      type="text"
      value=""
    />
    <span
      class="bp5-input-action"
    >
      <span
        class="bp5-popover-target"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="bp5-button bp5-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp5-icon bp5-icon-caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`SuggestibleInput matches snapshot with escaped value 1`] = `
<div
  class="formatted-input suggestible-input"
>
  <div
    class="bp5-input-group"
  >
    <input
      class="bp5-input"
      style="padding-right: 0px;"
      type="text"
      value="Here are some chars \\t\\r\\n lol"
    />
    <span
      class="bp5-input-action"
    >
      <span
        class="bp5-popover-target"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="bp5-button bp5-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp5-icon bp5-icon-caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;
